# memo

./: .gitignore  LICENSE  Makefile.am  Makefile.in  README.md  configure  configure.ac
docs/: extracting-lineage-os-system-img.html  index.html  installing-android-sdk-cmd-line-tools.html
sources/: Makefile.am  Makefile.in  extracting-lineage-os-system-img.mekki  index.mekki  installing-android-sdk-cmd-line-tools.mekki  mekki.css
